--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,497 +1,19 @@
 @import "./base/normalize";
 @import "./base/reset";
+@import "./base/common";
+
 @import "./utils/vars";
 
 @import "./components/container";
-@import "./components/header";
-@import "./components/index";
-@import "./components/portfolio";
-@import "./components/page-footer";
-
 @import "./components/modal";
 
-body {
-    font-family: 'Roboto', sans-serif;
-    font-style: normal;
-    background-color: var(--default-bg-color);
-    color: var(--main-text-color);
-    letter-spacing: 0.03em;
-}
-
-
-
-button {
-    cursor: pointer;
-}
-
-img {
-    display: block;
-}
-
-.section {
-    padding-top: 94px;
-    padding-bottom: 94px;
-}
-
-.list {
-    list-style: none;
-}
-
-.item,
-.soc-item {
-    margin: 0;
-    padding: 0;
-}
-
-.link {
-    text-decoration: none;
-}
-
-
-/* HERO */
-
-.hero {
-    width: 1600px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: 200px;
-    padding-bottom: 200px;
-
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/herobg.jpg);
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-position: center;
-    background-color: #c4c4c4;
-    text-align: center;
-}
-
-.hero-title {
-    display: block;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 696px;
-
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--default-bg-color);
-}
-
-.hero-button {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px 24px;
-
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-
-    color: var(--default-bg-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border-style: none;
-
-    transition-property: background-color;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.hero-button:hover,
-.hero-button:focus {
-    background-color: #188ce8;
-}
-
-/* ABOUT */
-
-.section-title {
-    display: none;
-}
-
-.section-about {
-    padding-bottom: 0;
-}
-
-.about-list {
-    display: flex;
-}
-
-.about-list .item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.about-title {
-    margin-bottom: 10px;
-
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
-
-.about-text {
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
-
-    color: var(--second-text-color);
-}
-
-.about-icon-frame {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 270px;
-    height: 120px;
-    margin-bottom: 30px;
-    background-color: var(--section-bg-color);
-    border-radius: 4px;
-}
-
-/* What we do */
-
-.what-list {
-    display: flex;
-    justify-content: space-between;
-}
-
-.what-thumb {
-    display: flex;
-    position: relative;
-    justify-content: center;
-}
-
-.what-thumb::before {
-    content: '';
-    display: inline-block;
-    position: absolute;
-    background-color: var(--overlay-color);
-    height: 70px;
-    width: 100%;
-    bottom: 0;
-}
-
-.what-description-title {
-    position: absolute;
-    bottom: 27px;
-
-    color: var(--default-bg-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
-
-.what-list .item+.item {
-    margin-left: 30px;
-}
-
-.what-title,
-.command-maintitle,
-.client-title {
-    margin-bottom: 50px;
-
-    font-size: 36px;
-    line-height: 1.17;
-    text-align: center;
-    letter-spacing: 0.03em;
-}
-
-/* Command */
-
-.command-list {
-    display: flex;
-}
-
-.command-list .item+.item {
-    margin-left: 30px;
-}
-
-.command-list .item {
-    background: var(--default-bg-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-        0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-}
-
-.command-list div {
-    padding-top: 30px;
-    padding-bottom: 16px;
-}
-
-.section-command {
-    background-color: var(--section-bg-color);
-    /* width: 1600px;
-    margin-right:auto;
-    margin-left:auto;  */
-}
-
-.command-title {
-    margin-bottom: 10px;
-
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    text-align: center;
-}
-
-.command-text {
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
-    text-align: center;
-
-    color: var(--second-text-color);
-}
-
-.command-soc-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 30px;
-}
-
-.command-soc-item {
-    width: 44px;
-    height: 44px;
-}
-
-.command-soc-item:not(:last-child) {
-    margin-right: 10px;
-}
-
-.command-soc-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-
-    transition-property: background-color;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.command-soc-link:hover,
-.command-soc-link:focus {
-    background-color: var(--accent-color);
-    fill: var(--default-bg-color);
-}
-
-.command-soc-icon {
-    fill: var(--soc-icon-fill);
-
-    transition-property: fill;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.command-soc-link:hover .command-soc-icon,
-.command-soc-link:focus .command-soc-icon {
-    fill: var(--default-bg-color);
-}
-
-/* Clients */
-
-.client-list {
-    display: flex;
-}
-
-.client-item {
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-
-    transition-property: border;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.client-link.link {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 170px;
-    height: 92px;
-}
-
-.client-icon {
-    fill: var(--soc-icon-fill);
-
-    transition-property: background-color fill;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.client-link:hover .client-icon,
-.client-link:focus .client-icon {
-    fill: var(--accent-color);
-}
-
-.client-item:not(:last-child) {
-    margin-right: 30px;
-}
-
-.client-item:hover,
-.client-item:focus {
-    border: 1px solid var(--accent-color);
-}
-
-
-/* -----------------Portfolio----------- */
-
-/* menu */
-
-.buttons {
-    display: flex;
-    margin-bottom: 50px;
-    justify-content: center;
-}
-
-.buttons .item+.item {
-    margin-left: 8px;
-}
-
-.projects {
-    padding-top: 100px;
-    padding-bottom: 94px;
-}
-
-.project-description {
-    padding: 20px 24px;
-}
-
-.project-button {
-    display: inline-block;
-    padding: 6px 22px;
-
-    cursor: pointer;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    text-align: center;
-
-    color: var(--header-color-title);
-    background-color: var(--section-bg-color);
-    border-radius: 4px;
-    border-style: none;
-
-    transition-property: background-color color box-shadow;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.project-button:hover,
-.project-button:focus {
-    color: var(--default-bg-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-/* Projects */
-
-.project-title {
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-}
-
-.project-type {
-    font-size: 16px;
-    line-height: 1.88;
-
-    color: var(--second-text-color);
-}
-
-.project-list {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.project-item {
-    width: 370px;
-    background: var(--default-bg-color);
-    border: 1px solid #eeeeee;
-    margin-bottom: 30px;
-}
-
-.project-thumb {
-    position: relative;
-
-    overflow: hidden;
-}
-
-.project-thumb::before {
-    position: absolute;
-    display: inline-block;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    background-color: var(--overlay-accent);
-
-    opacity: 0;
-
-    transform: translateY(100%);
-
-    transition-property: transform opacity;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.project-text {
-    position: absolute;
-    top: 63px;
-    left: 24px;
-
-    color: var(--default-bg-color);
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-
-    opacity: 0;
-    transform: translateY(135%);
-
-    transition-property: transform opacity;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.project-item:hover .project-text {
-    transform: translate(0);
-    opacity: 1;
-}
-
-.project-item:hover,
-.project-item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.project-item:hover .project-thumb::before,
-.project-item:focus .project-thumb::before {
-    transform: translateY(0);
-    opacity: 1;
-}
-
-.project-item:not(:nth-child(3n)) {
-    margin-right: 30px;
-}
-
-.project-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
-}
+@import "./layouts/header";
+@import "./layouts/hero";
+@import "./layouts/about";
+@import "./layouts/direction";
+@import "./layouts/command";
+@import "./layouts/clients";
+@import "./layouts/footer";
+
+@import "./layouts/portfolio-menu";
+@import "./layouts/portfolio-projects";
