--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,7 +10,7 @@
 @import "./layouts/header";
 @import "./layouts/hero";
 @import "./layouts/about";
-@import "./layouts/direction";
+@import "./layouts/solution";
 @import "./layouts/command";
 @import "./layouts/clients";
 @import "./layouts/footer";
