--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -1,46 +1,44 @@
-/* ABOUT */
-
-.section-title {
+.section__title {
     display: none;
 }
 
-.section-about {
+.about {
     padding-bottom: 0;
-}
 
-.about-list {
-    display: flex;
-}
+    &__list {
+        display: flex;
+    }
 
-.about-list .item:not(:last-child) {
-    margin-right: 30px;
-}
+    &__list .item:not(:last-child) {
+        margin-right: 30px;
+    }
 
-.about-title {
-    margin-bottom: 10px;
+    &__title {
+        margin-bottom: 10px;
 
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-}
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+    }
 
-.about-text {
-    font-size: 14px;
-    line-height: 1.71;
-    letter-spacing: 0.03em;
+    &__text {
+        font-size: 14px;
+        line-height: 1.71;
+        letter-spacing: 0.03em;
 
-    color: var(--second-text-color);
-}
+        color: var(--second-text-color);
+    }
 
-.about-icon-frame {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 270px;
-    height: 120px;
-    margin-bottom: 30px;
-    background-color: var(--section-bg-color);
-    border-radius: 4px;
+    &__icon {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 270px;
+        height: 120px;
+        margin-bottom: 30px;
+        background-color: var(--section-bg-color);
+        border-radius: 4px;
+    }
 }
