--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,5 +1,3 @@
-/* HERO */
-
 .hero {
     width: 1600px;
     margin-left: auto;
@@ -7,54 +5,51 @@
     padding-top: 200px;
     padding-bottom: 200px;
 
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../images/herobg.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url(../images/herobg.jpg);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
     background-color: #c4c4c4;
     text-align: center;
-}
 
-.hero-title {
-    display: block;
-    margin-bottom: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 696px;
+    &__title {
+        display: block;
+        margin-bottom: 30px;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 696px;
 
-    font-weight: 900;
-    font-size: 44px;
-    line-height: 1.36;
-    letter-spacing: 0.06em;
-    text-transform: uppercase;
-    color: var(--default-bg-color);
-}
+        font-weight: 900;
+        font-size: 44px;
+        line-height: 1.36;
+        letter-spacing: 0.06em;
+        text-transform: uppercase;
+        color: var(--default-bg-color);
+    }
 
-.hero-button {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 10px 24px;
+    &__button {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        padding: 10px 24px;
 
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
+        font-family: inherit;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.06em;
 
-    color: var(--default-bg-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border-style: none;
+        color: var(--default-bg-color);
+        background-color: var(--accent-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border-style: none;
 
-    transition-property: background-color;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
+        transition: background-color var(--duration) var(--transition-timing);
+    }
 
-.hero-button:hover,
-.hero-button:focus {
-    background-color: #188ce8;
+    &__button:hover,
+    &__button:focus {
+        background-color: #188ce8;
+    }
 }
