--- a/css/main.css
+++ b/css/main.css
@@ -339,9 +339,7 @@ img {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition-property: opacity;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
+  transition: opacity var(--duration) var(--transition-timing);
 }
 
 .backdrop.is-hidden {
@@ -367,29 +365,42 @@ img {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transform: translate(-50%, -50%) scale(1);
-  transition-property: transform;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
+  transition: transform var(--duration) var(--transition-timing);
 }
-
-.modal-title {
-  margin-bottom: 30px;
+.modal__title {
+  margin-bottom: 12px;
   font-weight: 700;
   font-size: 20px;
   line-height: 1.15;
   text-align: center;
 }
 
-.modal-form-label {
+.modal__close {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: var(--default-bg-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  transition: fill var(--duration) var(--transition-timing);
+}
+.modal__close:hover, .modal__close:focus {
+  fill: var(--accent-color);
+}
+
+.form-field__label {
   font-size: 12px;
   line-height: 1.17px;
   letter-spacing: 0.01em;
   color: var(--second-text-color);
 }
 
-.modal-input {
-  margin-top: 4px;
-  margin-bottom: 10px;
+.form-field__input {
   padding-left: 42px;
   padding-top: 12px;
   padding-bottom: 12px;
@@ -401,31 +412,34 @@ img {
   transition: border-color var(--transition-timing) var(--duration);
 }
 
-.modal-box {
+.form-field__box {
   position: relative;
+  margin-top: 4px;
+  margin-bottom: 10px;
 }
 
-.modal-input-icon {
+.form-field__icon {
   position: absolute;
   top: 50%;
   left: 15px;
+  transform: translate(-50%, -50%);
   transition: fill var(--transition-timing) var(--duration);
 }
 
-.modal-input:hover,
-.modal-input:focus,
-.modal-textarea:hover,
-.modal-textarea:focus {
+.form-field__input:hover,
+.form-field__input:focus,
+.form-field__textarea:hover,
+.form-field__textarea:focus {
   outline: transparent;
   border-color: #2196f3;
 }
 
-.modal-input:hover + svg,
-.modal-input:focus + svg {
+.form-field__input:hover + svg,
+.form-field__input:focus + svg {
   fill: var(--accent-color);
 }
 
-.modal-textarea {
+.form-field__textarea {
   margin-top: 4px;
   margin-bottom: 20px;
   padding: 12px 16px;
@@ -458,7 +472,7 @@ textarea::placeholder {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-button {
+.form-field__button {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -478,17 +492,17 @@ textarea::placeholder {
   transition-timing-function: var(--transition-timing);
 }
 
-.modal-button:hover {
+.form-field__button:hover {
   background-color: #188ce8;
 }
 
-.checkbox {
+.checkbox__input {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
 }
 
-.agree-title {
+.checkbox__title {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -498,7 +512,7 @@ textarea::placeholder {
   color: var(--second-text-color);
 }
 
-.agree-icon {
+.checkbox__icon {
   display: inline-block;
   fill: transparent;
   margin-right: 7px;
@@ -508,37 +522,16 @@ textarea::placeholder {
   border-radius: 2px;
 }
 
-.agree-link {
+.checkbox__link {
+  margin-left: 5px;
   color: var(--accent-color);
 }
 
-.checkbox:checked + .agree-icon {
+.checkbox__input:checked + .checkbox__icon {
   background-color: var(--accent-color);
   background-origin: border-box;
   background-size: contain;
   border-color: transparent;
-}
-
-.close-modal {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: var(--default-bg-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  transition-property: fill;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
-}
-
-.close-modal:hover,
-.close-modal:focus {
-  fill: var(--accent-color);
 }
 
 .header {
@@ -673,10 +666,6 @@ textarea::placeholder {
   background-color: #188ce8;
 }
 
-.section__title {
-  display: none;
-}
-
 .about {
   padding-bottom: 0;
 }
@@ -685,6 +674,9 @@ textarea::placeholder {
 }
 .about__list .item:not(:last-child) {
   margin-right: 30px;
+}
+.about__pretitle {
+  display: none;
 }
 .about__title {
   margin-bottom: 10px;
@@ -711,7 +703,7 @@ textarea::placeholder {
   border-radius: 4px;
 }
 
-.solution__title, .command__title {
+.solution__title, .client__title, .command__title {
   margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
@@ -751,31 +743,26 @@ textarea::placeholder {
   margin-left: 30px;
 }
 
-/* Command */
-.command-list {
+.command {
+  background-color: var(--section-bg-color);
+}
+.command__list {
   display: flex;
 }
-
-.command-list .item + .item {
-  margin-left: 30px;
-}
-
-.command-list .item {
+.command__list .item {
   background: var(--default-bg-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 }
-
-.command-list div {
+.command__list .item:not(:last-child) {
+  margin-right: 30px;
+}
+.command__list div {
   padding-top: 30px;
   padding-bottom: 16px;
 }
 
-.command {
-  background-color: var(--section-bg-color);
-}
-
-.command-title {
+.person__title {
   margin-bottom: 10px;
   font-weight: 500;
   font-size: 16px;
@@ -784,7 +771,7 @@ textarea::placeholder {
   text-align: center;
 }
 
-.command-text {
+.person__job {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
@@ -792,66 +779,63 @@ textarea::placeholder {
   color: var(--second-text-color);
 }
 
-.command-soc-list {
+.person__soc-list {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
 }
 
-.command-soc-item {
+.person__soc-item {
   width: 44px;
   height: 44px;
 }
-
-.command-soc-item:not(:last-child) {
+.person__soc-item:not(:last-child) {
   margin-right: 10px;
 }
 
-.command-soc-link {
+.person__soc-icon {
+  fill: var(--soc-icon-fill);
+  transition: fill var(--duration) var(--transition-timing);
+}
+
+.person__soc-link {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  transition-property: background-color;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
+  transition: background-color var(--duration) var(--transition-timing);
 }
-
-.command-soc-link:hover,
-.command-soc-link:focus {
+.person__soc-link:hover, .person__soc-link:focus {
   background-color: var(--accent-color);
   fill: var(--default-bg-color);
 }
-
-.command-soc-icon {
-  fill: var(--soc-icon-fill);
-  transition-property: fill;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
-}
-
-.command-soc-link:hover .command-soc-icon,
-.command-soc-link:focus .command-soc-icon {
+.person__soc-link:hover .person__soc-icon, .person__soc-link:focus .person__soc-icon {
   fill: var(--default-bg-color);
 }
 
-/* Clients */
-.client-list {
+.client__list {
   display: flex;
 }
 
-.client-item {
+.client__item {
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition-property: border;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
+  transition: border var(--duration) var(--transition-timing);
+}
+.client__item:not(:last-child) {
+  margin-right: 30px;
+}
+.client__item:hover, .client__item:focus {
+  border: 1px solid var(--accent-color);
+}
+.client__item:hover .client__icon, .client__item:focus .client__icon {
+  fill: var(--accent-color);
 }
 
-.client-link.link {
+.client__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -859,74 +843,46 @@ textarea::placeholder {
   height: 92px;
 }
 
-.client-icon {
+.client__icon {
   fill: var(--soc-icon-fill);
-  transition-property: background-color fill;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
+  transition: background-color, fill var(--duration) var(--transition-timing);
 }
 
-.client-link:hover .client-icon,
-.client-link:focus .client-icon {
-  fill: var(--accent-color);
-}
-
-.client-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.client-item:hover,
-.client-item:focus {
-  border: 1px solid var(--accent-color);
-}
-
-/* ======Footer===== */
 .footer {
   background-color: var(--footer-bg-color);
   padding-bottom: 60px;
   padding-top: 60px;
 }
-
-.footer-position {
+.footer__position {
   display: flex;
 }
-
-.logo.footer {
+.footer__logo {
   padding-top: 0;
   padding-bottom: 0;
   margin-bottom: 32px;
-}
-
-.logo.color {
   color: var(--default-bg-color);
 }
 
 .address {
   font-style: inherit;
 }
+.address__item.item {
+  margin-bottom: 12px;
+}
 
-.footer-contact {
+.address__contact {
   display: inline-block;
   margin: 0;
   font-size: 14px;
   line-height: 1.71;
   color: var(--default-bg-color);
-  transition-property: color;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
+  transition: color var(--duration) var(--transition-timing);
 }
-
-.footer-list .item {
-  margin-bottom: 12px;
-}
-
-.footer-contact.color {
-  color: var(--footer-text-color);
-}
-
-.footer-contact:hover,
-.footer-contact:focus {
+.address__contact.link:hover, .address__contact.link:focus {
   color: var(--accent-color);
+}
+.address__contact.color {
+  color: var(--footer-text-color);
 }
 
 .join {
@@ -935,9 +891,7 @@ textarea::placeholder {
   width: 206px;
   height: 80px;
 }
-
-.join-title,
-.subscribe-title {
+.join__title, .subscribe__title {
   text-align: left;
   color: var(--default-bg-color);
   font-weight: 700;
@@ -947,41 +901,32 @@ textarea::placeholder {
   text-transform: uppercase;
   margin-bottom: 20px;
 }
-
-.join-list {
+.join__list, .join__link {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.join-item {
+.join__item {
   width: 44px;
   height: 44px;
 }
+.join__item:not(:last-child) {
+  margin-right: 10px;
+}
 
-.join-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.join__link {
   width: 100%;
   height: 100%;
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.1);
-  transition-property: background-color;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
+  transition: background-color var(--duration) var(--transition-timing);
 }
-
-.join-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.join-link:hover,
-.join-link:focus {
+.join__link:hover, .join__link:focus {
   background-color: var(--accent-color);
 }
 
-.join-icon {
+.join__icon {
   fill: var(--default-bg-color);
 }
 
@@ -990,12 +935,10 @@ textarea::placeholder {
   margin-top: 12px;
   margin-left: 93px;
 }
-
-.subscribe-title {
+.subscribe__title {
   margin-bottom: 20px;
 }
-
-.subscribe-input {
+.subscribe__input {
   padding: 15px 16px;
   margin-right: 12px;
   width: 358px;
@@ -1005,15 +948,13 @@ textarea::placeholder {
   border-radius: 4px;
   background-color: var(--footer-bg-color);
   color: var(--default-bg-color);
+  transition: border var(--duration) var(--transition-timing);
 }
-
-.subscribe-input:hover,
-.subscribe-input:focus {
+.subscribe__input:hover, .subscribe__input:focus {
   outline: none;
   border: 1px solid var(--accent-color);
 }
-
-.subscribe-button {
+.subscribe__button {
   display: inline-flex;
   align-items: center;
   padding: 10px 28px;
@@ -1027,40 +968,25 @@ textarea::placeholder {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border-style: none;
+  transition: background-color var(--duration) var(--transition-timing);
 }
-
-.subscribe-icon {
+.subscribe__button:hover {
+  background-color: #188ce8;
+}
+.subscribe__icon {
   margin-left: 10px;
 }
 
-.subscribe-button:hover {
-  background-color: #188ce8;
-  transition-property: background-color;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
-}
-
-/* menu */
-.buttons {
+.menu {
   display: flex;
   margin-bottom: 50px;
   justify-content: center;
 }
-
-.buttons .item + .item {
+.menu .item + .item {
   margin-left: 8px;
 }
 
-.projects {
-  padding-top: 100px;
-  padding-bottom: 94px;
-}
-
-.project-description {
-  padding: 20px 24px;
-}
-
-.project-button {
+.menu__button {
   display: inline-block;
   padding: 6px 22px;
   cursor: pointer;
@@ -1073,49 +999,57 @@ textarea::placeholder {
   background-color: var(--section-bg-color);
   border-radius: 4px;
   border-style: none;
-  transition-property: background-color color box-shadow;
+  transition-property: color, box-shadow, background-color;
   transition-duration: var(--duration);
   transition-timing-function: var(--transition-timing);
 }
-
-.project-button:hover,
-.project-button:focus {
+.menu__button:hover, .menu__button:focus {
   color: var(--default-bg-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-/* Projects */
-.project-title {
+.project {
+  padding-top: 100px;
+  padding-bottom: 94px;
+}
+.project__list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.project__description {
+  padding: 20px 24px;
+}
+.project__title {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
 }
-
-.project-type {
+.project__type {
   font-size: 16px;
   line-height: 1.88;
   color: var(--second-text-color);
 }
-
-.project-list {
-  display: flex;
-  flex-wrap: wrap;
+.project__text {
+  position: absolute;
+  top: 63px;
+  left: 24px;
+  color: var(--default-bg-color);
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  opacity: 0;
+  transform: translateY(135%);
+  transition-property: transform opacity;
+  transition-duration: var(--duration);
+  transition-timing-function: var(--transition-timing);
 }
 
-.project-item {
-  width: 370px;
-  background: var(--default-bg-color);
-  border: 1px solid #eeeeee;
-  margin-bottom: 30px;
-}
-
-.project-thumb {
+.project__thumb {
   position: relative;
   overflow: hidden;
 }
-
-.project-thumb::before {
+.project__thumb::before {
   position: absolute;
   display: inline-block;
   content: "";
@@ -1131,41 +1065,26 @@ textarea::placeholder {
   transition-timing-function: var(--transition-timing);
 }
 
-.project-text {
-  position: absolute;
-  top: 63px;
-  left: 24px;
-  color: var(--default-bg-color);
-  font-size: 18px;
-  line-height: 1.56;
-  letter-spacing: 0.03em;
-  opacity: 0;
-  transform: translateY(135%);
-  transition-property: transform opacity;
-  transition-duration: var(--duration);
-  transition-timing-function: var(--transition-timing);
+.project__item {
+  width: 370px;
+  background: var(--default-bg-color);
+  border: 1px solid #eeeeee;
+  margin-bottom: 30px;
 }
-
-.project-item:hover .project-text {
+.project__item:not(:nth-child(3n)) {
+  margin-right: 30px;
+}
+.project__item:nth-last-child(-n+3) {
+  margin-bottom: 0;
+}
+.project__item:hover .project__text {
   transform: translate(0);
   opacity: 1;
 }
-
-.project-item:hover,
-.project-item:focus {
+.project__item:hover, .project__item:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-
-.project-item:hover .project-thumb::before,
-.project-item:focus .project-thumb::before {
+.project__item:hover .project__thumb::before, .project__item:focus .project__thumb::before {
   transform: translateY(0);
   opacity: 1;
-}
-
-.project-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-
-.project-item:nth-last-child(-n+3) {
-  margin-bottom: 0;
 }/*# sourceMappingURL=main.css.map */
