--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -10,17 +10,16 @@
 
     opacity: 1;
 
-    transition-property: opacity;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
+    transition: opacity var(--duration) var(--transition-timing);
 }
 
-.backdrop.is-hidden {
+
+&.is-hidden {
     opacity: 0;
     pointer-events: none;
 }
 
-.backdrop.is-hidden .modal {
+&.is-hidden .modal {
     transform: translate(-50%, -50%) scale(0.1);
 }
 
@@ -43,21 +42,54 @@
     border-radius: 4px;
 
     transform: translate(-50%, -50%) scale(1);
-    transition-property: transform;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
+
+    transition: transform var(--duration) var(--transition-timing);
+
+    &__title {
+        margin-bottom: 12px;
+
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.15;
+        text-align: center;
+    }
 }
 
-.modal-title {
-    margin-bottom: 30px;
 
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 1.15;
-    text-align: center;
+
+.modal__close {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    top: 8px;
+    right: 8px;
+
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+
+    background-color: var(--default-bg-color);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+
+    transition: fill var(--duration) var(--transition-timing);
+
+
+    &:hover,
+    &:focus {
+        fill: var(--accent-color);
+    }
 }
 
-.modal-form-label {
+.form-field__box {
+    position: relative;
+
+    margin-top: 4px;
+    margin-bottom: 10px;
+}
+
+.form-field__label {
     font-size: 12px;
     line-height: 1.17px;
     letter-spacing: 0.01em;
@@ -65,10 +97,7 @@
     color: var(--second-text-color);
 }
 
-.modal-input {
-    margin-top: 4px;
-    margin-bottom: 10px;
-
+.form-field__input {
     padding-left: 42px;
     padding-top: 12px;
     padding-bottom: 12px;
@@ -80,34 +109,32 @@
     border-radius: 4px;
 
     transition: border-color var(--transition-timing) var(--duration);
+
+    &:hover,
+    &:focus {
+        outline: transparent;
+        border-color: #2196f3;
+    }
+
+    &:hover+svg,
+    &:focus+svg {
+        fill: var(--accent-color);
+    }
 }
 
-.modal-box {
-    position: relative;
-}
 
-.modal-input-icon {
+
+.form-field__icon {
     position: absolute;
     top: 50%;
     left: 15px;
 
+    transform: translate(-50%, -50%);
+
     transition: fill var(--transition-timing) var(--duration);
 }
 
-.modal-input:hover,
-.modal-input:focus,
-.modal-textarea:hover,
-.modal-textarea:focus {
-    outline: transparent;
-    border-color: #2196f3;
-}
-
-.modal-input:hover+svg,
-.modal-input:focus+svg {
-    fill: var(--accent-color);
-}
-
-.modal-textarea {
+.form-field__textarea {
     margin-top: 4px;
     margin-bottom: 20px;
     padding: 12px 16px;
@@ -121,17 +148,23 @@
     width: 100%;
 
     transition: border-color var(--transition-timing) var(--duration);
+
+    &:hover,
+    &:focus {
+        outline: transparent;
+        border-color: #2196f3;
+    }
+
+    &::placeholder {
+        font-size: 12px;
+        line-height: 1.16;
+        letter-spacing: 0.01em;
+
+        color: rgba(117, 117, 117, 0.5);
+    }
 }
 
-textarea::placeholder {
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.01em;
-
-    color: rgba(117, 117, 117, 0.5);
-}
-
-.modal-button {
+.form-field__button {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -152,19 +185,26 @@ textarea::placeholder {
     transition-property: background-color;
     transition-duration: var(--duration);
     transition-timing-function: var(--transition-timing);
+
+    &:hover {
+        background-color: #188ce8;
+    }
 }
 
-.modal-button:hover {
-    background-color: #188ce8;
-}
-
-.checkbox {
+.checkbox__input {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
+
+    &:checked+.checkbox__icon {
+        background-color: var(--accent-color);
+        background-origin: border-box;
+        background-size: contain;
+        border-color: transparent;
+    }
 }
 
-.agree-title {
+.checkbox__title {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -176,50 +216,19 @@ textarea::placeholder {
     color: var(--second-text-color);
 }
 
-.agree-icon {
+.checkbox__icon {
     display: inline-block;
-    fill: transparent;
+
     margin-right: 7px;
     width: 16px;
     height: 15px;
 
+    fill: transparent;
     border: 2px solid var(--main-text-color);
     border-radius: 2px;
 }
 
-.agree-link {
+.checkbox__link {
+    margin-left: 5px;
     color: var(--accent-color);
-}
-
-.checkbox:checked+.agree-icon {
-    background-color: var(--accent-color);
-    background-origin: border-box;
-    background-size: contain;
-    border-color: transparent;
-}
-
-.close-modal {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    top: 8px;
-    right: 8px;
-
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-
-    background-color: var(--default-bg-color);
-    border: 1px solid rgba(0, 0, 0, 0.1);
-
-    transition-property: fill;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.close-modal:hover,
-.close-modal:focus {
-    fill: var(--accent-color);
 }
