--- a/sass/layouts/_about.scss
+++ b/sass/layouts/_about.scss
@@ -1,7 +1,3 @@
-.section__title {
-    display: none;
-}
-
 .about {
     padding-bottom: 0;
 
@@ -11,6 +7,10 @@
 
     &__list .item:not(:last-child) {
         margin-right: 30px;
+    }
+    
+    &__pretitle {
+        display: none;
     }
 
     &__title {
