--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,30 +1,29 @@
-/* ======Footer===== */
-
 .footer {
     background-color: var(--footer-bg-color);
     padding-bottom: 60px;
     padding-top: 60px;
-}
 
-.footer-position {
-    display: flex;
-}
+    &__position {
+        display: flex;
+    }
 
-.logo.footer {
-    padding-top: 0;
-    padding-bottom: 0;
-    margin-bottom: 32px;
-}
-
-.logo.color {
-    color: var(--default-bg-color);
+    &__logo {
+        padding-top: 0;
+        padding-bottom: 0;
+        margin-bottom: 32px;
+        color: var(--default-bg-color);
+    }
 }
 
 .address {
     font-style: inherit;
+
+    &__item.item {
+        margin-bottom: 12px;
+    }
 }
 
-.footer-contact {
+.address__contact {
     display: inline-block;
     margin: 0;
 
@@ -32,22 +31,16 @@
     line-height: 1.71;
     color: var(--default-bg-color);
 
-    transition-property: color;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
+    transition: color var(--duration) var(--transition-timing);
 
-.footer-list .item {
-    margin-bottom: 12px;
-}
+    &.link:hover,
+    &.link:focus {
+        color: var(--accent-color);
+    }
 
-.footer-contact.color {
-    color: var(--footer-text-color);
-}
-
-.footer-contact:hover,
-.footer-contact:focus {
-    color: var(--accent-color);
+    &.color {
+        color: var(--footer-text-color);
+    }
 }
 
 .join {
@@ -55,57 +48,52 @@
     margin-left: 70px;
     width: 206px;
     height: 80px;
+
+    &__title {
+        text-align: left;
+        color: var(--default-bg-color);
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 1.14;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+
+        margin-bottom: 20px;
+    }
+
+    &__list {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
-.join-title,
-.subscribe-title {
-    text-align: left;
-    color: var(--default-bg-color);
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-
-    margin-bottom: 20px;
-}
-
-.join-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.join-item {
+.join__item {
     width: 44px;
     height: 44px;
+
+    &:not(:last-child) {
+        margin-right: 10px;
+    }
 }
 
-.join-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.join__link {
+    @extend .join__list;
     width: 100%;
     height: 100%;
     border-radius: 50%;
 
     background-color: rgba(255, 255, 255, 0.1);
 
-    transition-property: background-color;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
+    transition: background-color var(--duration) var(--transition-timing);
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+    }
 }
 
-.join-item:not(:last-child) {
-    margin-right: 10px;
-}
-
-.join-link:hover,
-.join-link:focus {
-    background-color: var(--accent-color);
-}
-
-.join-icon {
+.join__icon {
     fill: var(--default-bg-color);
 }
 
@@ -114,59 +102,64 @@
 .subscribe {
     margin-top: 12px;
     margin-left: 93px;
-}
 
-.subscribe-title {
-    margin-bottom: 20px;
-}
+    &__title {
+        @extend .join__title;
+        margin-bottom: 20px;
+    }
 
-.subscribe-input {
-    padding: 15px 16px;
+    &__input {
+        padding: 15px 16px;
 
-    margin-right: 12px;
-    width: 358px;
-    height: 50px;
+        margin-right: 12px;
+        width: 358px;
+        height: 50px;
 
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    background-color: var(--footer-bg-color);
+        border: 1px solid rgba(255, 255, 255, 0.3);
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+        border-radius: 4px;
+        background-color: var(--footer-bg-color);
 
-    color: var(--default-bg-color);
-}
+        color: var(--default-bg-color);
 
-.subscribe-input:hover,
-.subscribe-input:focus {
-    outline: none;
-    border: 1px solid var(--accent-color);
-}
+        transition: border var(--duration) var(--transition-timing);
 
-.subscribe-button {
-    display: inline-flex;
-    align-items: center;
-    padding: 10px 28px;
+        &:hover,
+        &:focus {
+            outline: none;
+            border: 1px solid var(--accent-color);
+        }
 
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
+    }
 
-    color: var(--default-bg-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border-style: none;
-}
+    &__button {
+        display: inline-flex;
+        align-items: center;
+        padding: 10px 28px;
 
-.subscribe-icon {
-    margin-left: 10px;
-}
+        font-family: inherit;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.88;
+        letter-spacing: 0.06em;
 
-.subscribe-button:hover {
-    background-color: #188ce8;
+        color: var(--default-bg-color);
+        background-color: var(--accent-color);
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+        border-radius: 4px;
+        border-style: none;
 
-    transition-property: background-color;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
+        transition: background-color var(--duration) var(--transition-timing);
+      
+
+        &:hover {
+            background-color: #188ce8;
+           
+        }
+
+        
+    }
+    &__icon {
+        margin-left: 10px;
+    }
 }
