--- a/sass/layouts/_portfolio-menu.scss
+++ b/sass/layouts/_portfolio-menu.scss
@@ -1,29 +1,18 @@
-/* menu */
-
-.buttons {
+.menu {
     display: flex;
     margin-bottom: 50px;
     justify-content: center;
+
+    & .item+.item {
+            margin-left: 8px;
+        }
 }
 
-.buttons .item+.item {
-    margin-left: 8px;
-}
-
-.projects {
-    padding-top: 100px;
-    padding-bottom: 94px;
-}
-
-.project-description {
-    padding: 20px 24px;
-}
-
-.project-button {
+.menu__button {
     display: inline-block;
     padding: 6px 22px;
-
     cursor: pointer;
+    
     font-family: inherit;
     font-weight: 500;
     font-size: 16px;
@@ -32,18 +21,19 @@
 
     color: var(--header-color-title);
     background-color: var(--section-bg-color);
+
     border-radius: 4px;
     border-style: none;
 
-    transition-property: background-color color box-shadow;
+    transition-property: color, box-shadow, background-color; 
     transition-duration: var(--duration);
     transition-timing-function: var(--transition-timing);
+
+    &:hover,
+    &:focus {
+            color: var(--default-bg-color);
+            background-color: var(--accent-color);
+            box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+        }
 }
 
-.project-button:hover,
-.project-button:focus {
-    color: var(--default-bg-color);
-    background-color: var(--accent-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
