--- a/sass/layouts/_portfolio-projects.scss
+++ b/sass/layouts/_portfolio-projects.scss
@@ -1,95 +1,101 @@
-/* Projects */
+.project {
+    padding-top: 100px;
+    padding-bottom: 94px;
 
-.project-title {
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    &__description {
+        padding: 20px 24px;
+    }
+
+    &__title {
+        font-size: 18px;
+        line-height: 2;
+        letter-spacing: 0.06em;
+    }
+
+    &__type {
+        font-size: 16px;
+        line-height: 1.88;
+
+        color: var(--second-text-color);
+    }
+
+    &__text {
+        position: absolute;
+        top: 63px;
+        left: 24px;
+
+        color: var(--default-bg-color);
+        font-size: 18px;
+        line-height: 1.56;
+        letter-spacing: 0.03em;
+
+        opacity: 0;
+        transform: translateY(135%);
+
+        transition-property: transform opacity;
+        transition-duration: var(--duration);
+        transition-timing-function: var(--transition-timing);
+    }
 }
 
-.project-type {
-    font-size: 16px;
-    line-height: 1.88;
+.project__thumb {
+    position: relative;
+    overflow: hidden;
 
-    color: var(--second-text-color);
+    &::before {
+        position: absolute;
+        display: inline-block;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        background-color: var(--overlay-accent);
+
+        opacity: 0;
+
+        transform: translateY(100%);
+
+        transition-property: transform opacity;
+        transition-duration: var(--duration);
+        transition-timing-function: var(--transition-timing);
+    }
 }
 
-.project-list {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.project-item {
+.project__item {
     width: 370px;
     background: var(--default-bg-color);
     border: 1px solid #eeeeee;
     margin-bottom: 30px;
-}
 
-.project-thumb {
-    position: relative;
+    &:not(:nth-child(3n)) {
+        margin-right: 30px;
+    }
 
-    overflow: hidden;
-}
+    &:nth-last-child(-n + 3) {
+        margin-bottom: 0;
+    }
 
-.project-thumb::before {
-    position: absolute;
-    display: inline-block;
-    content: '';
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    &:hover .project__text {
+        transform: translate(0);
+        opacity: 1;
+    }
 
-    background-color: var(--overlay-accent);
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 
-    opacity: 0;
-
-    transform: translateY(100%);
-
-    transition-property: transform opacity;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.project-text {
-    position: absolute;
-    top: 63px;
-    left: 24px;
-
-    color: var(--default-bg-color);
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-
-    opacity: 0;
-    transform: translateY(135%);
-
-    transition-property: transform opacity;
-    transition-duration: var(--duration);
-    transition-timing-function: var(--transition-timing);
-}
-
-.project-item:hover .project-text {
-    transform: translate(0);
-    opacity: 1;
-}
-
-.project-item:hover,
-.project-item:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
-.project-item:hover .project-thumb::before,
-.project-item:focus .project-thumb::before {
-    transform: translateY(0);
-    opacity: 1;
-}
-
-.project-item:not(:nth-child(3n)) {
-    margin-right: 30px;
-}
-
-.project-item:nth-last-child(-n + 3) {
-    margin-bottom: 0;
+    &:hover .project__thumb::before,
+    &:focus .project__thumb::before {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
