--- a/sass/layouts/_solution.scss
+++ b/sass/layouts/_solution.scss
@@ -1,10 +1,9 @@
 .solution__title {
     margin-bottom: 50px;
 
-    font-size: 36px;
-    line-height: 1.17;
+    @include font(null, 36, 1.17);   
     text-align: center;
-    letter-spacing: 0.03em;
+    
 }
 
 .direction {
@@ -32,10 +31,7 @@
         bottom: 27px;
 
         color: var(--default-bg-color);
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
+        @include font(700, 14, 1.14);      
         text-transform: uppercase;
     }
 
