--- a/css/main.css
+++ b/css/main.css
@@ -341,12 +341,10 @@ img {
   opacity: 1;
   transition: opacity var(--duration) var(--transition-timing);
 }
-
 .backdrop.is-hidden {
   opacity: 0;
   pointer-events: none;
 }
-
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.1);
 }
@@ -378,8 +376,8 @@ img {
 .modal__close {
   position: absolute;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   top: 8px;
   right: 8px;
   width: 30px;
@@ -393,9 +391,15 @@ img {
   fill: var(--accent-color);
 }
 
+.form-field__box {
+  position: relative;
+  margin-top: 4px;
+  margin-bottom: 10px;
+}
+
 .form-field__label {
   font-size: 12px;
-  line-height: 1.17px;
+  line-height: 1.17;
   letter-spacing: 0.01em;
   color: var(--second-text-color);
 }
@@ -411,11 +415,12 @@ img {
   border-radius: 4px;
   transition: border-color var(--transition-timing) var(--duration);
 }
-
-.form-field__box {
-  position: relative;
-  margin-top: 4px;
-  margin-bottom: 10px;
+.form-field__input:hover, .form-field__input:focus {
+  outline: transparent;
+  border-color: #2196f3;
+}
+.form-field__input:hover + svg, .form-field__input:focus + svg {
+  fill: var(--accent-color);
 }
 
 .form-field__icon {
@@ -424,19 +429,6 @@ img {
   left: 15px;
   transform: translate(-50%, -50%);
   transition: fill var(--transition-timing) var(--duration);
-}
-
-.form-field__input:hover,
-.form-field__input:focus,
-.form-field__textarea:hover,
-.form-field__textarea:focus {
-  outline: transparent;
-  border-color: #2196f3;
-}
-
-.form-field__input:hover + svg,
-.form-field__input:focus + svg {
-  fill: var(--accent-color);
 }
 
 .form-field__textarea {
@@ -450,22 +442,23 @@ img {
   width: 100%;
   transition: border-color var(--transition-timing) var(--duration);
 }
-
-textarea::-moz-placeholder {
+.form-field__textarea:hover, .form-field__textarea:focus {
+  outline: transparent;
+  border-color: #2196f3;
+}
+.form-field__textarea::-moz-placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-textarea:-ms-input-placeholder {
+.form-field__textarea:-ms-input-placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
   color: rgba(117, 117, 117, 0.5);
 }
-
-textarea::placeholder {
+.form-field__textarea::placeholder {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.01em;
@@ -491,7 +484,6 @@ textarea::placeholder {
   transition-duration: var(--duration);
   transition-timing-function: var(--transition-timing);
 }
-
 .form-field__button:hover {
   background-color: #188ce8;
 }
@@ -500,6 +492,12 @@ textarea::placeholder {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
+}
+.checkbox__input:checked + .checkbox__icon {
+  background-color: var(--accent-color);
+  background-origin: border-box;
+  background-size: contain;
+  border-color: transparent;
 }
 
 .checkbox__title {
@@ -514,10 +512,10 @@ textarea::placeholder {
 
 .checkbox__icon {
   display: inline-block;
-  fill: transparent;
   margin-right: 7px;
   width: 16px;
   height: 15px;
+  fill: transparent;
   border: 2px solid var(--main-text-color);
   border-radius: 2px;
 }
@@ -525,13 +523,6 @@ textarea::placeholder {
 .checkbox__link {
   margin-left: 5px;
   color: var(--accent-color);
-}
-
-.checkbox__input:checked + .checkbox__icon {
-  background-color: var(--accent-color);
-  background-origin: border-box;
-  background-size: contain;
-  border-color: transparent;
 }
 
 .header {
@@ -574,7 +565,7 @@ textarea::placeholder {
   color: inherit;
   font-weight: 500;
   font-size: 14px;
-  line-height: 1, 14;
+  line-height: 1.14;
   letter-spacing: 0.02em;
   transition: color var(--duration) var(--transition-timing);
 }
@@ -607,8 +598,8 @@ textarea::placeholder {
 }
 .contacts__link {
   display: flex;
-  color: var(--second-text-color);
   align-items: center;
+  color: var(--second-text-color);
 }
 .contacts__icon {
   margin-right: 10px;
@@ -694,8 +685,8 @@ textarea::placeholder {
 }
 .about__icon {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   width: 270px;
   height: 120px;
   margin-bottom: 30px;
@@ -707,8 +698,8 @@ textarea::placeholder {
   margin-bottom: 50px;
   font-size: 36px;
   line-height: 1.17;
-  text-align: center;
   letter-spacing: 0.03em;
+  text-align: center;
 }
 
 .direction {
@@ -781,8 +772,8 @@ textarea::placeholder {
 
 .person__soc-list {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   margin-bottom: 30px;
 }
 
@@ -801,8 +792,8 @@ textarea::placeholder {
 
 .person__soc-link {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   border-radius: 50%;
@@ -903,8 +894,8 @@ textarea::placeholder {
 }
 .join__list, .join__link {
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
 }
 
 .join__item {
@@ -958,6 +949,8 @@ textarea::placeholder {
   display: inline-flex;
   align-items: center;
   padding: 10px 28px;
+  width: 200px;
+  height: 50px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
@@ -1040,7 +1033,7 @@ textarea::placeholder {
   letter-spacing: 0.03em;
   opacity: 0;
   transform: translateY(135%);
-  transition-property: transform opacity;
+  transition-property: transform, opacity;
   transition-duration: var(--duration);
   transition-timing-function: var(--transition-timing);
 }
@@ -1060,7 +1053,7 @@ textarea::placeholder {
   background-color: var(--overlay-accent);
   opacity: 0;
   transform: translateY(100%);
-  transition-property: transform opacity;
+  transition-property: transform, opacity;
   transition-duration: var(--duration);
   transition-timing-function: var(--transition-timing);
 }
