--- a/sass/layouts/_command.scss
+++ b/sass/layouts/_command.scss
@@ -28,27 +28,18 @@
 
 .person__title {
     margin-bottom: 10px;
-
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+    @include font(500, 16, 1.19);    
     text-align: center;
 }
 
 .person__job {
-    font-size: 16px;
-    line-height: 1.19;
-    letter-spacing: 0.03em;
+    @include font(null, 16, 1.19);
     text-align: center;
-
     color: var(--second-text-color);
 }
 
 .person__soc-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-all-center;
     margin-bottom: 30px;
 }
 
@@ -57,24 +48,20 @@
     height: 44px;
 
     &:not(:last-child) {
-        margin-right: 10px;
+    margin-right: 10px;
     }
 }
 
 .person__soc-icon {
     fill: var(--soc-icon-fill);
-
     transition: fill var(--duration) var(--transition-timing);
 }
 
 .person__soc-link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    @include flex-all-center;
     width: 100%;
     height: 100%;
     border-radius: 50%;
-
     transition: background-color var(--duration) var(--transition-timing);
 
     &:hover,
