--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -26,11 +26,8 @@
 .address__contact {
     display: inline-block;
     margin: 0;
-
-    font-size: 14px;
-    line-height: 1.71;
+    @include font(null, 14, 1.71, null);  
     color: var(--default-bg-color);
-
     transition: color var(--duration) var(--transition-timing);
 
     &.link:hover,
@@ -52,19 +49,13 @@
     &__title {
         text-align: left;
         color: var(--default-bg-color);
-        font-weight: 700;
-        font-size: 14px;
-        line-height: 1.14;
-        letter-spacing: 0.03em;
+        @include font(700, 14, 1.14);     
         text-transform: uppercase;
-
         margin-bottom: 20px;
     }
 
     &__list {
-        display: flex;
-        justify-content: center;
-        align-items: center;
+        @include flex-all-center;
     }
 }
 
@@ -82,9 +73,7 @@
     width: 100%;
     height: 100%;
     border-radius: 50%;
-
     background-color: rgba(255, 255, 255, 0.1);
-
     transition: background-color var(--duration) var(--transition-timing);
 
     &:hover,
@@ -110,18 +99,14 @@
 
     &__input {
         padding: 15px 16px;
-
         margin-right: 12px;
         width: 358px;
         height: 50px;
-
         border: 1px solid rgba(255, 255, 255, 0.3);
         filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
         border-radius: 4px;
         background-color: var(--footer-bg-color);
-
         color: var(--default-bg-color);
-
         transition: border var(--duration) var(--transition-timing);
 
         &:hover,
@@ -136,28 +121,20 @@
         display: inline-flex;
         align-items: center;
         padding: 10px 28px;
-
-        font-family: inherit;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.88;
-        letter-spacing: 0.06em;
-
+        width: 200px;
+        height: 50px;
+        font-family: inherit;        @include font(700, 16, 1.88, $ls:0.06em);  
         color: var(--default-bg-color);
         background-color: var(--accent-color);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         border-style: none;
-
         transition: background-color var(--duration) var(--transition-timing);
       
-
         &:hover {
             background-color: #188ce8;
            
-        }
-
-        
+        }        
     }
     &__icon {
         margin-left: 10px;
