--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -3,8 +3,7 @@
     border-bottom: 1px solid #ececec;
 
     &__nav {
-        display: flex;
-        align-items: center;
+        @include flex-align;
     }
 }
 
@@ -13,12 +12,9 @@
     margin-left: 0;
     padding-top: 24px;
     padding-bottom: 25px;
-
     font-family: 'Raleway', sans-serif;
-    font-size: 26px;
-    line-height: 1.19;
+    @include font(null, 26, 1.19, null); 
     color: var(--logo-color);
-
     &--accent {
         color: var(--accent-color);
     }
@@ -40,15 +36,11 @@
         display: block;
         padding-top: 32px;
         padding-bottom: 32px;
-
         color: inherit;
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 1, 14;
-        letter-spacing: 0.02em;
-
+        @include font(500, 14, 1.14, $ls:0.02em);       
         transition: color var(--duration) var(--transition-timing)
     }
+
     &__link:hover,
     &__link:focus {
         color: var(--accent-color);
@@ -62,7 +54,6 @@
         width: 100%;
         height: 4px;
         border-radius: 2px;
-
         background-color: currentColor;
     }
 
@@ -89,15 +80,14 @@
     }
 
     &__link {
-        display: flex;
+        @include flex-align;
         color: var(--second-text-color);
-        align-items: center;
+        
     }
 
     &__icon {
         margin-right: 10px;
         fill: var(--second-text-color);
-
         transition: fill var(--duration) var(--transition-timing)
     }
 
