--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -4,7 +4,6 @@
     margin-right: auto;
     padding-top: 200px;
     padding-bottom: 200px;
-
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),url(../images/herobg.jpg);
     background-repeat: no-repeat;
     background-size: contain;
@@ -18,11 +17,7 @@
         margin-left: auto;
         margin-right: auto;
         max-width: 696px;
-
-        font-weight: 900;
-        font-size: 44px;
-        line-height: 1.36;
-        letter-spacing: 0.06em;
+        @include font(900, 44, 1.36, $ls:0.06em);       
         text-transform: uppercase;
         color: var(--default-bg-color);
     }
@@ -32,19 +27,13 @@
         margin-left: auto;
         margin-right: auto;
         padding: 10px 24px;
-
         font-family: inherit;
-        font-weight: 700;
-        font-size: 16px;
-        line-height: 1.88;
-        letter-spacing: 0.06em;
-
+        @include font(700, 16, 1.88, $ls:0.06em);        
         color: var(--default-bg-color);
         background-color: var(--accent-color);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
         border-radius: 4px;
         border-style: none;
-
         transition: background-color var(--duration) var(--transition-timing);
     }
 
