--- a/sass/layouts/_portfolio-menu.scss
+++ b/sass/layouts/_portfolio-menu.scss
@@ -14,9 +14,7 @@
     cursor: pointer;
     
     font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
+    @include font(500, 16, 1.62, null);
     text-align: center;
 
     color: var(--header-color-title);
@@ -24,7 +22,7 @@
 
     border-radius: 4px;
     border-style: none;
-
+   
     transition-property: color, box-shadow, background-color; 
     transition-duration: var(--duration);
     transition-timing-function: var(--transition-timing);
