--- a/sass/layouts/_portfolio-projects.scss
+++ b/sass/layouts/_portfolio-projects.scss
@@ -12,15 +12,11 @@
     }
 
     &__title {
-        font-size: 18px;
-        line-height: 2;
-        letter-spacing: 0.06em;
+        @include font(null, 18, 2, $ls:0.06em);
     }
 
     &__type {
-        font-size: 16px;
-        line-height: 1.88;
-
+        @include font(null, 16, 1.88, null);        
         color: var(--second-text-color);
     }
 
@@ -30,14 +26,11 @@
         left: 24px;
 
         color: var(--default-bg-color);
-        font-size: 18px;
-        line-height: 1.56;
-        letter-spacing: 0.03em;
-
+        @include font(null, 18, 1.56);
+        
         opacity: 0;
         transform: translateY(135%);
-
-        transition-property: transform opacity;
+        transition-property: transform, opacity;
         transition-duration: var(--duration);
         transition-timing-function: var(--transition-timing);
     }
@@ -55,14 +48,11 @@
         left: 0;
         width: 100%;
         height: 100%;
-
         background-color: var(--overlay-accent);
-
         opacity: 0;
-
         transform: translateY(100%);
 
-        transition-property: transform opacity;
+        transition-property: transform, opacity;
         transition-duration: var(--duration);
         transition-timing-function: var(--transition-timing);
     }
