--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./base/common";
 
 @import "./utils/vars";
+@import "./utils/mixin";
 
 @import "./components/container";
 @import "./components/modal";
