--- a/sass/layouts/_command.scss
+++ b/sass/layouts/_command.scss
@@ -6,25 +6,27 @@
     }
 }
 
-.command__list {
+.person__list {
     display: flex;
+}
 
-    & .item {
+.person__item {
         
-        background: var(--default-bg-color);
-        box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-            0px 2px 1px rgba(0, 0, 0, 0.2);
-        border-radius: 0px 0px 4px 4px;
-    }
+    background: var(--default-bg-color);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+   
 
-    & .item:not(:last-child) {
+    &:not(:last-child) {
         margin-right: 30px;
     }
-    & div {
-        padding-top: 30px;
-        padding-bottom: 16px;
-    }
 }
+
+.person__title-box {
+    padding-top: 30px;
+    padding-bottom: 16px;
+}
+   
 
 .person__title {
     margin-bottom: 10px;
@@ -38,40 +40,43 @@
     color: var(--second-text-color);
 }
 
-.person__soc-list {
-    @include flex-all-center;
+.person__social {
     margin-bottom: 30px;
 }
 
-.person__soc-item {
-    width: 44px;
-    height: 44px;
-
-    &:not(:last-child) {
-    margin-right: 10px;
-    }
-}
-
-.person__soc-icon {
-    fill: var(--soc-icon-fill);
-    transition: fill var(--duration) var(--transition-timing);
-}
-
-.person__soc-link {
+.social {
     @include flex-all-center;
-    width: 100%;
-    height: 100%;
-    border-radius: 50%;
-    transition: background-color var(--duration) var(--transition-timing);
-
-    &:hover,
-    &:focus {
-        background-color: var(--accent-color);
-        fill: var(--default-bg-color);
+    
+    &__item {
+            width: 44px;
+            height: 44px;
+    
+            &:not(:last-child) {
+                margin-right: 10px;
+            }
     }
 
-    &:hover .person__soc-icon,
-    &:focus .person__soc-icon {
-        fill: var(--default-bg-color);
+    &__link {
+        @include flex-all-center;
+        width: 100%;
+        height: 100%;
+        border-radius: 50%;
+        transition: background-color var(--duration) var(--transition-timing);
+
+        &:hover,
+        &:focus {
+            background-color: var(--accent-color);
+            fill: var(--default-bg-color);
+        }
+
+        &:hover .social__icon,
+        &:focus .social__icon {
+            fill: var(--default-bg-color);
+        }
+    }
+
+    &__icon {
+        fill: var(--soc-icon-fill);
+        transition: fill var(--duration) var(--transition-timing);
     }
 }
