--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -8,58 +8,58 @@
 }
 
 .logo {
-    display: inline-block;
-    margin-left: 0;
+    display: inline-block;    
     padding-top: 24px;
     padding-bottom: 25px;
     font-family: 'Raleway', sans-serif;
     @include font(null, 26, 1.19, null); 
     color: var(--logo-color);
-    &--accent {
+    &__accent {
         color: var(--accent-color);
     }
 }
 
-.nav {
+.navigation__list {
     display: flex;
     margin-left: 93px;
+       
+}
 
-    &__item {
-        position: relative;
-    }
+.navigation__item {
+    position: relative;
 
-    &__item:not(:last-child) {
+    &:not(:last-child) {
         margin-right: 50px;
     }
+}
 
-    &__link {
-        display: block;
-        padding-top: 32px;
-        padding-bottom: 32px;
-        color: inherit;
-        @include font(500, 14, 1.14, $ls:0.02em);       
-        transition: color var(--duration) var(--transition-timing)
-    }
+.navigation__link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+    color: inherit;
+    @include font(500, 14, 1.14, $ls: 0.02em);
+    transition: color var(--duration) var(--transition-timing);
 
-    &__link:hover,
-    &__link:focus {
-        color: var(--accent-color);
-    }
-
-    &__link.current::after {
-        position: absolute;
-        content: '';
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 4px;
-        border-radius: 2px;
-        background-color: currentColor;
-    }
-
-    &__link.current {
-        color: var(--accent-color);
-    }
+        &:hover,
+        &:focus {
+            color: var(--accent-color);
+        }
+    
+        &.current::after {
+            position: absolute;
+            content: '';
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 4px;
+            border-radius: 2px;
+            background-color: currentColor;
+        }
+    
+        &.current {
+            color: var(--accent-color);
+        }
 }
 
 .contacts {
@@ -67,7 +67,7 @@
     margin-left: auto;
 
     &__link {
-        @extend .nav__link
+        @extend .navigation__link
     }
 
     &__link:hover,
