--- a/sass/layouts/_portfolio-projects.scss
+++ b/sass/layouts/_portfolio-projects.scss
@@ -1,57 +1,35 @@
-.project {
+.portfolio {
     padding-top: 100px;
     padding-bottom: 94px;
+}
 
-    &__list {
-        display: flex;
-        flex-wrap: wrap;
-    }
+.project {
+    display: flex;
+    flex-wrap: wrap;
 
     &__description {
         padding: 20px 24px;
     }
-
+    
     &__title {
-        @include font(null, 18, 2, $ls:0.06em);
+        @include font(null, 18, 2, $ls: 0.06em);
     }
-
+    
     &__type {
-        @include font(null, 16, 1.88, null);        
+        @include font(null, 16, 1.88, null);
         color: var(--second-text-color);
     }
-
+    
     &__text {
         position: absolute;
         top: 63px;
         left: 24px;
-
+    
         color: var(--default-bg-color);
         @include font(null, 18, 1.56);
-        
+    
         opacity: 0;
         transform: translateY(135%);
-        transition-property: transform, opacity;
-        transition-duration: var(--duration);
-        transition-timing-function: var(--transition-timing);
-    }
-}
-
-.project__thumb {
-    position: relative;
-    overflow: hidden;
-
-    &::before {
-        position: absolute;
-        display: inline-block;
-        content: '';
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: var(--overlay-accent);
-        opacity: 0;
-        transform: translateY(100%);
-
         transition-property: transform, opacity;
         transition-duration: var(--duration);
         transition-timing-function: var(--transition-timing);
@@ -87,5 +65,27 @@
     &:focus .project__thumb::before {
         transform: translateY(0);
         opacity: 1;
+    }
+}
+
+.project__thumb {
+    position: relative;
+    overflow: hidden;
+
+    &::before {
+        position: absolute;
+        display: inline-block;
+        content: '';
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: var(--overlay-accent);
+        opacity: 0;
+        transform: translateY(100%);
+
+        transition-property: transform, opacity;
+        transition-duration: var(--duration);
+        transition-timing-function: var(--transition-timing);
     }
 }
