--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -4,26 +4,7 @@
 
 .partner {
     display: flex;
-
-    &__item {
-    border: 1px solid #afb1b8;
-    border-radius: 4px;
-    transition: border var(--duration) var(--transition-timing);
-
-        &:not(:last-child) {
-            margin-right: 30px;
-        }
-
-        &:hover,
-        &:focus {
-            border: 1px solid var(--accent-color);
-        }
-        &:hover .partner__icon,
-        &:focus .partner__icon {
-            fill: var(--accent-color);
-        }
-    }
-
+    
     &__link {
         @include flex-all-center;
         width: 170px;
@@ -33,5 +14,25 @@
         fill: var(--soc-icon-fill);
         transition: background-color, fill var(--duration) var(--transition-timing);
 
+    }
+}
+
+.partner__item {
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    transition: border var(--duration) var(--transition-timing);
+
+    &:not(:last-child) {
+        margin-right: 30px;
+    }
+
+    &:hover,
+    &:focus {
+        border: 1px solid var(--accent-color);
+    }
+
+    &:hover .partner__icon,
+    &:focus .partner__icon {
+        fill: var(--accent-color);
     }
 }
