--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -15,8 +15,6 @@
         }
 }
 
-
-
 .address {
     font-style: inherit;
 
@@ -55,16 +53,15 @@
         text-transform: uppercase;
         margin-bottom: 20px;
     }
-}
 
-.join__link {    
-    background-color: rgba(255, 255, 255, 0.1);    
-}
+    &__link {
+        background-color: rgba(255, 255, 255, 0.1);
+    }
 
-.join__icon {
-    fill: var(--default-bg-color);
+    &__icon {
+        fill: var(--default-bg-color);
+    }
 }
-
 /* ====================Subscribe =================*/
 
 .subscribe {
@@ -74,48 +71,49 @@
     &__title {
         @extend .join__title;
         margin-bottom: 20px;
-    }
-
-    &__input {
-        padding: 15px 16px;
-        margin-right: 12px;
-        width: 358px;
-        height: 50px;
-        border: 1px solid rgba(255, 255, 255, 0.3);
-        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-        border-radius: 4px;
-        background-color: var(--footer-bg-color);
-        color: var(--default-bg-color);
-        transition: border var(--duration) var(--transition-timing);
-
-        &:hover,
-        &:focus {
-            outline: none;
-            border: 1px solid var(--accent-color);
-        }
-
-    }
-
-    &__button {
-        display: inline-flex;
-        align-items: center;
-        padding: 10px 28px;
-        width: 200px;
-        height: 50px;
-        font-family: inherit;        @include font(700, 16, 1.88, $ls:0.06em);  
-        color: var(--default-bg-color);
-        background-color: var(--accent-color);
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-        border-radius: 4px;
-        border-style: none;
-        transition: background-color var(--duration) var(--transition-timing);
-      
-        &:hover {
-            background-color: #188ce8;
-           
-        }        
-    }
+    }  
+    
     &__icon {
         margin-left: 10px;
+    }
+}
+
+.subscribe__input {
+    padding: 15px 16px;
+    margin-right: 12px;
+    width: 358px;
+    height: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    background-color: var(--footer-bg-color);
+    color: var(--default-bg-color);
+    transition: border var(--duration) var(--transition-timing);
+
+    &:hover,
+    &:focus {
+        outline: none;
+        border: 1px solid var(--accent-color);
+    }
+}
+
+.subscribe__button {
+    display: inline-flex;
+    align-items: center;
+    padding: 10px 28px;
+    width: 200px;
+    height: 50px;
+    font-family: inherit;
+    @include font(700, 16, 1.88, $ls: 0.06em);
+    color: var(--default-bg-color);
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border-style: none;
+    transition: background-color var(--duration) var(--transition-timing);
+
+    &:hover {
+        background-color: #188ce8;
+
     }
 }
